2001-11-12  Michael Meeks  <michael@ximian.com>

	* libnautilus/nautilus-view.c
	(view_frame_call_begin): guard against
	CORBA_OBJECT_NIL return from get_control_frame.

2001-11-12  Thomas Canty  <tommydal@optushome.com.au>
	* configure.in: Initialise the gnome-vfs-module package,
	which is required for the help component

  	* components/help/*.[c|am]: Get the help component
	working.

	* components/text/nautilus-text-view.c: Some work towards
	getting this file compiling.

	* components/throbber/main.c: register the factory iid 
	directly.

	* components/tree/*.c: get the tree component compiling 
	and linking.

2001-11-12  Michael Meeks  <michael@ximian.com>

	* components/throbber/main.c: include string.h
	
2001-11-10  Thomas Canty  <tommydal@optushome.com.au>
 
 	* Lots of files:
 	Work towards getting the components compiling and 
 	working. History, News, Notes and Throbber components 
 	are now working.
 
 	*  libnautilus/nautilus-view-standard-main.c:
 	Change the initialisation to use bonobo_ui_init
 
 	* src/nautilus-window-toolbars.c:
 	Re-enable the throbber.
 

2001-11-10  Benedikt Roth  <Benedikt.Roth@gmx.net>
 
	* components/help/hyperbola-nav-index.c:
	* components/help/hyperbola-nav-tree.c:
	Include <config.h> so that localization works

2001-11-09  Darin Adler  <darin@bentspoon.com>

	* libnautilus-private/nautilus-horizontal-splitter.c:
	Remove unused stuff.

	* libnautilus-private/nautilus-icon-container.c: (destroy),
	(finalize), (nautilus_icon_container_class_init): Fix the
	destroy and finalize code for the new object lifetime rules.
	* libnautilus-private/nautilus-icon-dnd.c:
	(nautilus_icon_dnd_fini): Fix another multiple-invocation
	issue.
	* libnautilus-private/nautilus-program-chooser.c:
	(nautilus_program_chooser_new): Change response codes to
	match the way this worked under GnomeDialog.

	* libnautilus-private/README: Update wording a bit.

2001-11-09  Michael Meeks  <michael@ximian.com>
