@@ -1,3 +1,14 @@
+2001-11-12  Darin Adler  <darin@bentspoon.com>
+
+	* components/history/nautilus-history-view.c:
+	* components/notes/nautilus-notes.c:
+	* components/sample/nautilus-sample-content-view.c:
+	* components/throbber/nautilus-throbber.c:
+	Update to use proper boilerplate macros. Other porting tweaks.
+	
+	* libnautilus/nautilus-view.c: Switch to gnome version of macros
+	instead of eel version.
+
 2001-11-12  Michael Meeks  <michael@ximian.com>
 
 	* libnautilus/nautilus-view.c
